argocd/workloads/mysite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite
  annotations:
    cert-manager.io/issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - daigo-suhara.com
      secretName: daigo-suhara-com-tls
  rules:
    - host: daigo-suhara.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysite
                port:
                  name: http
